--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,17 +26,17 @@ phases:
       - "aws ecr get-login --no-include-email"
       - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - IMAGE_URI="${REPOSITORY_URI}:${TAG}"
-#  build:
-#    commands:
-#      - docker build --tag "$IMAGE_URI" .
-#  post_build:
-#    commands:
-#      - docker push "$IMAGE_URI"
-#      - printf '[{"name":"simple-app","imageUri":"%s"}]' "$IMAGE_URI" > images.json
-#      - "kubectl apply -f kubernetes_deploy/"
-#artifacts:
-#  files:
-#     - images.json
+  build:
+    commands:
+      - "docker build --tag $IMAGE_URI ."
+  post_build:
+    commands:
+      - "docker push $IMAGE_URI"
+      - printf '[{"name":"simple-app","imageUri":"%s"}]' "$IMAGE_URI" > images.json
+      - "kubectl apply -f kubernetes_deploy/"
+  artifacts:
+    files:
+      - images.json
 
   #discard-paths: yes
   #base-directory: location
