--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,6 +28,7 @@ phases:
       - IMAGE_URI="${REPOSITORY_URI}:${TAG}"
   build:
     commands:
+      - "echo $IMAGE_URI"
       - "docker build --tag $IMAGE_URI ."
   post_build:
     commands:
