--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,7 +29,7 @@ phases:
   build:
     commands:
       - "echo $IMAGE_URI"
-      - "pwgen -s 50 1 > password.txt"
+      - "pwgen -s 50 1 > ~/password.txt"
       - "aws s3 cp ~/password.txt s3://non-production-cluster-keystore/password.txt"
       - "export SECRET_KEY=`cat ~/password.txt`"
       - "echo SECRET_KEY=$SECRET_KEY"
