--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,9 +31,7 @@ phases:
       - "echo $IMAGE_URI"
       - "pwgen -s 50 1 > ~/password.txt"
       - "aws s3 cp ~/password.txt s3://non-production-cluster-keystore/password.txt"
-      - "export SECRET_KEY=`cat ~/password.txt`"
-      - "echo SECRET_KEY=$SECRET_KEY"
-      - "docker build --tag $IMAGE_URI ."
+      - "docker build --build-arg SECRET_KEY=`cat ~/password.txt` --tag $IMAGE_URI ."
   post_build:
     commands:
       - "docker push $IMAGE_URI"
