--- a/buildspec.yml
+++ b/buildspec.yml
@@ -35,7 +35,7 @@ phases:
       - "docker build --build-arg SECRET_KEY=`cat ~/password.txt` --tag $IMAGE_URI ."
   post_build:
     commands:
-      - "cat ~/.docker/config"
+      - "cat .docker/config"
       - "docker push $IMAGE_URI"
       - printf '[{"name":"simple-app","imageUri":"%s"}]' "$IMAGE_URI" > images.json
       - "kubectl apply -f kubernetes_deploy/"
