--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,6 +25,7 @@ phases:
     commands:
 #      - $(aws ecr get-login --region eu-west-1)
       - "aws ecr get-login --no-include-email"
+      - "aws ecr describe-repositories" 
       - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - IMAGE_URI="${REPOSITORY_URI}:${TAG}"
   build:
@@ -35,7 +36,7 @@ phases:
       - "docker build --build-arg SECRET_KEY=`cat ~/password.txt` --tag $IMAGE_URI ."
   post_build:
     commands:
-      - "cat .docker/config"
+#      - "cat .docker/config"
       - "docker push $IMAGE_URI"
       - printf '[{"name":"simple-app","imageUri":"%s"}]' "$IMAGE_URI" > images.json
       - "kubectl apply -f kubernetes_deploy/"
