--- a/buildspec.yml
+++ b/buildspec.yml
@@ -36,7 +36,8 @@ phases:
       - "docker build --build-arg SECRET_KEY=`cat ~/password.txt` --tag $IMAGE_URI ."
   post_build:
     commands:
-      - "find / -name config.json"
+      - "ls -la"
+      - "ls -la /root/"
       - "docker push $IMAGE_URI"
       - printf '[{"name":"simple-app","imageUri":"%s"}]' "$IMAGE_URI" > images.json
       - "kubectl apply -f kubernetes_deploy/"
