--- a/kubernetes_deploy/laa-fee-calc-dev-app_deployment.yaml
+++ b/kubernetes_deploy/laa-fee-calc-dev-app_deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: "laa-fee-dev-app"
+  namespace: laa-fee-calculator-dev
 spec:
   template:
     metadata:
@@ -9,7 +10,7 @@ spec:
         app: "laa-fee-dev-app"
     spec:
       containers:
-      - image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/k8s-laa-calculator
+      - image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-fee-calculator
         name: "laa-fee-dev-app"
         ports:
         - containerPort: 8080
