--- a/kubernetes_deploy/laa-fee-calc-dev-db_deployment.yaml
+++ b/kubernetes_deploy/laa-fee-calc-dev-db_deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
  name: laa-fee-dev-db
+ namespace: laa-fee-calculator-dev
 spec:
  template:
    metadata:
