--- a/kubernetes_deploy/laa-fee-calc-dev_ingress.yaml
+++ b/kubernetes_deploy/laa-fee-calc-dev_ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: "laa-fee-dev"
+  namespace: laa-fee-calculator-dev
   annotations:
     kubernetes.io/ingress.class: "nginx"
     kubernetes.io/tls-acme: "true"
