--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,6 +42,7 @@ phases:
       - "ls -la /root/"
       - "docker push $IMAGE_URI"
       - printf '[{"name":"simple-app","imageUri":"%s"}]' "$IMAGE_URI" > images.json
+      - "kubectl delete deploy laa-fee-dev-app"
       - "kubectl apply -f kubernetes_deploy/"
       - "POD=$(kubectl get pods | grep laa-fee-dev-app | awk '{print $1}')"
       - "kubectl exec $POD venv/bin/python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype"
