--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,8 @@ phases:
     commands:
       - eval $(aws ecr get-login | sed 's/-e none //g')
       - "aws ecr describe-repositories" 
-      - TAG="latest"
+#      - TAG="latest"
+      - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - IMAGE_URI="${REPOSITORY_URI}:${TAG}"
   build:
     commands:
@@ -40,6 +41,8 @@ phases:
       - "docker push $IMAGE_URI"
       - printf '[{"name":"simple-app","imageUri":"%s"}]' "$IMAGE_URI" > images.json
       - "kubectl apply -f kubernetes_deploy/"
+      - "kubectl set image deployment/laa-fee-dev-app laa-fee-dev-app=926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-fee-calculator:$TAG"
+      - "kubectl rollout status deployment/laa-fee-dev-app"
       - "POD=$(kubectl get pods -n laa-fee-calculator-dev | grep laa-fee-dev-app | awk '{print $1}')"
       - "kubectl exec $POD -n laa-fee-calculator-dev venv/bin/python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype"
 artifacts:
