--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   install:
     commands:
       - "apt update"
-      - "apt install -y awscli git pwgen"
+      - "apt install -y awscli git pwgen python"
       - "wget https://github.com/kubernetes/kops/releases/download/1.8.0/kops-linux-amd64"
       - "chmod +x kops-linux-amd64"
       - "mv kops-linux-amd64 /usr/local/bin/kops"
@@ -43,9 +43,9 @@ phases:
       - "kubectl apply -f kubernetes_deploy/"
       - "kubectl set image deployment/laa-fee-dev-app *=926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-fee-calculator:$TAG --namespace laa-fee-calculator-dev"
       - "kubectl rollout status deployments/laa-fee-dev-app --namespace=laa-fee-calculator-dev"
-      - "POD=$(kubectl get pods -n laa-fee-calculator-dev | grep laa-fee-dev-app | awk '{print $1}')"
-      - "echo $POD"
-      - "kubectl exec $POD -n laa-fee-calculator-dev venv/bin/python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype"
+      - "PODS=$(kubectl get pods --selector='app=laa-fee-dev-app'  --namespace=laa-fee-calculator-dev -o name)"
+      - "echo $PODS"
+      - "echo $PODS | while read POD; do kubectl exec $POD -n laa-fee-calculator-dev python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype"
 artifacts:
   files:
     - images.json
