--- a/buildspec.yml
+++ b/buildspec.yml
@@ -45,7 +45,7 @@ phases:
       - "kubectl rollout status deployments/laa-fee-dev-app --namespace=laa-fee-calculator-dev"
       - "PODS=$(kubectl get pods --selector='app=laa-fee-dev-app'  --namespace=laa-fee-calculator-dev -o name)"
       - "echo $PODS"
-      - "echo $PODS | while read POD; do kubectl exec $POD -n laa-fee-calculator-dev python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype"
+      - "echo $PODS | while read POD; do kubectl exec $POD -n laa-fee-calculator-dev python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype; done"
 artifacts:
   files:
     - images.json
