Second step of image size reduction
Removed obsolete packages installed during the first build step and moved artifacts
to the newly created docker image.

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,19 +1,15 @@
 [uwsgi]
 procname = uwsgi_%n
-
 vhost = true
 http = :8080
-uid = www-data
-gid = www-data
 chmod-socket = 666
-chown-socket = www-data
 master = true
 enable-threads = true
 processes = 2
 chdir = %d
-virtualenv = %d/venv
 module = fee_calculator.wsgi:application
 static-map = /static=fee_calculator/static
+socket = /tmp/uwsgi.sock
 post-buffering = 1
 buffer-size = 65535
 http-timeout = 20
