--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
     commands:
       - "apt update"
       - "apt install -y awscli git pwgen python"
+      - "pip install kubernetes"
       - "wget https://github.com/kubernetes/kops/releases/download/1.8.0/kops-linux-amd64"
       - "chmod +x kops-linux-amd64"
       - "mv kops-linux-amd64 /usr/local/bin/kops"
@@ -25,7 +26,6 @@ phases:
     commands:
       - eval $(aws ecr get-login | sed 's/-e none //g')
       - "aws ecr describe-repositories" 
-#      - TAG="latest"
       - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - IMAGE_URI="${REPOSITORY_URI}:${TAG}"
   build:
@@ -36,18 +36,14 @@ phases:
       - "docker build --build-arg SECRET_KEY=`cat ~/password.txt` --tag $IMAGE_URI ."
   post_build:
     commands:
-      - "ls -la"
-      - "ls -la /root/"
       - "docker push $IMAGE_URI"
       - printf '[{"name":"simple-app","imageUri":"%s"}]' "$IMAGE_URI" > images.json
       - "kubectl apply -f kubernetes_deploy/"
       - "kubectl set image deployment/laa-fee-dev-app *=926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-fee-calculator:$TAG --namespace laa-fee-calculator-dev"
-#      - "kubectl rollout status deployments/laa-fee-dev-app --namespace=laa-fee-calculator-dev"
-      - "sleep 60"
-      - "PODS=$(kubectl get pods --selector='app=laa-fee-dev-app'  --namespace=laa-fee-calculator-dev -o name  | sed 's%pods/%%' | sed 's%pod/%%')"
-      - "echo $PODS"
-#      - "echo $PODS | while read POD; do kubectl exec -n laa-fee-calculator-dev $POD 'apt-get install -y python-pip; pip install -r requirements.txt; python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype'; done"
-      - "echo $PODS | while read POD; do kubectl exec -n laa-fee-calculator-dev $POD -- /bin/bash -c 'apt-get install -y libpq-dev python-pip; pip install -r requirements.txt; /usr/bin/python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype'; done"
+#      - "sleep 60"
+#      - "PODS=$(kubectl get pods --selector='app=laa-fee-dev-app'  --namespace=laa-fee-calculator-dev -o name  | sed 's%pods/%%' | sed 's%pod/%%')"
+#      - "echo $PODS"
+#      - "echo $PODS | while read POD; do kubectl exec -n laa-fee-calculator-dev $POD -- /bin/bash -c 'apt-get install -y libpq-dev python-pip; pip install -r requirements.txt; /usr/bin/python manage.py loaddata advocatetype feetype offenceclass price scenario scheme unit modifier modifiertype'; done"
 
 artifacts:
   files:
